[tool.poetry]
name = "netquality"
version = "1.0.0"
description = "Benchmark your internet connection."
license = "GPL-2.0-only"
authors = ["Julio Cabria <juliocabria@tutanota.com>"]
readme = "README.md"
repository = "https://github.com/Julynx/netquality"

[tool.poetry.dependencies]
python = "^3.12"
match-func = "^1.0.0"
pythonping = "^1.1.4"
speedtest-cli = "^2.1.3"
string-grab = "^1.3.0"

[tool.poetry.scripts]
netquality = "netquality.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
